# cyclemusicpipeline

./: .cache  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cyclemusicpipeline.env  docker-compose.yml  docker-entrypoint.sh  get_spotify_token.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run.sh  run_with_librespot.sh  setup.py  spotify_api.py  spotifyd.conf  track_schema.json
.github/: copilot-instructions.md
.github/workflows/: auto-approve.yml  docker-image.yml  python-package.yml
analyze/: analyze_track.py  track_schema.json
archive/: .pylintrc  music_map.json
archive/tests/: test_main.py
capture/: auto_capture_playlist_only.py  auto_route_spotify.sh  batch_process_maps.py  process_all_captures.sh
manage/: auto_queue_and_process.py  base44_utils.py  delete_all_choreography.py  manage_processing_playlist.py  process_queue.py  spotify_api.py  sync_from_base44.py  trackupdate.py
prompts/: system.txt  system.txt.old  user.txt
scripts/: smoke_check.sh
